--- a/src/includes/hotellerie/_article.pug
+++ b/src/includes/hotellerie/_article.pug
@@ -1,6 +1,6 @@
 //-Vie d'Ecosup Campus
 mj-wrapper(background-color="#e6e6e6" padding="20px")
-    mj-section(padding="0px")
+    //-mj-section(padding="0px")
         mj-group(width="100%")
             mj-column(width="25%")
                 mj-image(padding="1px" width="300px" src="https://i.ibb.co/tMJ7BXR2/jpo02-Hot2025article.png" alt="Ecosup Campus soutient Movember, l'opération de la lutte sur le cancer de la prostate")/
