--- a/src/includes/hotellerie/_formations.pug
+++ b/src/includes/hotellerie/_formations.pug
@@ -1,8 +1,8 @@
 //-formations Hôtellerie 
-mj-section(padding="20px" padding-bottom="0px" background-color="#ffffff")
+//-mj-section(padding="20px" padding-bottom="0px" background-color="#e6e6e6")
     mj-column(width="88%")
         mj-text(align="center" padding="0" mj-class="T24-300 cT1") Nos formations en Hôtellerie Restauration de Bac+2 à Bac+5
-mj-section(padding="20px" background-color="#ffffff")
+mj-section(padding="20px" background-color="#e6e6e6")
     //-formation MAN
     mj-column(width="30%")
         mj-image(padding="0" width="224px" src="https://i.ibb.co/zWkzZnrQ/form04-Hot-Jpo24052025.png" alt="formation Mise à niveau découverte de l'hôtellerie et de la restauration")/
@@ -18,12 +18,12 @@ mj-section(padding="20px" background-color="#ffffff")
             | #[span(style="color:#d9d9d9;") &#x25CF;] Le Plus : #[span(style="font-weight:700;color:#1a1a1a;") Bourse Ecosup],
         mj-text(padding="0 15px" align="left" mj-class="T16-400 cT0") 
             | #[span(style="color:#d9d9d9;") &#x25CF;] Formation initiale ou continue. Financement possible grâce à la mobilisation du CPF ou autres organismes extérieurs.
-        mj-button(padding-top="15px" target="_blank" href="https://ecosup-hotellerie.fr/mise-a-niveau-2") 
+        //-mj-button(padding-top="15px" target="_blank" href="https://ecosup-hotellerie.fr/mise-a-niveau-2") 
             | En savoir plus&nbsp;&nbsp;#[img(width="12px" src="https://i.ibb.co/PsQFDFLq/fleche-Hotellerie.png" alt="flèche hôtellerie rouge")/]
 mj-section(padding="0")
     mj-column
         mj-spacer(height="10px")
-mj-section(padding="20px" background-color="#ffffff" direction="rtl")
+mj-section(padding="20px" background-color="#e6e6e6" direction="rtl")
     //-formation BTS        
     mj-column(width="30%")
         mj-image(padding="0" width="224px" src="https://i.ibb.co/p6pFwGDJ/form03-Hot-Jpo24052025.png" alt="formation BTS Management Hôtellerie Restauration")/
@@ -39,13 +39,13 @@ mj-section(padding="20px" background-color="#ffffff" direction="rtl")
             | #[span(style="color:#d9d9d9;") &#x25CF;] Le Plus : #[span(style="font-weight:700;color:#1a1a1a;") Diplôme reconnue par l'État],
         mj-text(align="left" padding="0 15px" mj-class="T16-400 cT0") 
             | #[span(style="color:#d9d9d9;") &#x25CF;] Formation gratuite et rémunérée.
-        mj-button(padding-top="15px" target="_blank" href="https://ecosup-hotellerie.fr/bts-management-hotellerie-restauration-apprentissage")
+        //-mj-button(padding-top="15px" target="_blank" href="https://ecosup-hotellerie.fr/bts-management-hotellerie-restauration-apprentissage")
             | En savoir plus&nbsp;&nbsp;#[img(width="12px" src="https://i.ibb.co/PsQFDFLq/fleche-Hotellerie.png" alt="flèche hôtellerie rouge")/]
 mj-section(padding="0")
     mj-column
         mj-spacer(height="10px")
 //-formation Bachelor 
-mj-section(padding="20px" background-color="#ffffff")
+mj-section(padding="20px" background-color="#e6e6e6")
     mj-column(width="30%")
         mj-image(padding="0" width="224px" src="https://i.ibb.co/d1NGJSc/form02-Hot-Jpo24052025.png" alt="formation Bachelor Chargé(e) de Gestion commerciale en Hôtellerie")/
     mj-column(width="70%")
@@ -60,12 +60,12 @@ mj-section(padding="20px" background-color="#ffffff")
             | #[span(style="color:#d9d9d9;") &#x25CF;] Le Plus : #[span(style="font-weight:700;color:#1a1a1a;") Travel Week], semaine immersive en mobilité internationale,
         mj-text(padding="0 15px" align="left" mj-class="T16-400 cT0")
             | #[span(style="color:#d9d9d9;") &#x25CF;] Formation gratuite et rémunérée.
-        mj-button(padding-top="15px" target="_blank" href="https://ecosup-hotellerie.fr/bachelor-responsable-commercial-en-hotellerie")
+        //-mj-button(padding-top="15px" target="_blank" href="https://ecosup-hotellerie.fr/bachelor-responsable-commercial-en-hotellerie")
             | En savoir plus&nbsp;&nbsp;#[img(width="12px" src="https://i.ibb.co/PsQFDFLq/fleche-Hotellerie.png" alt="flèche hôtellerie rouge")/]
 mj-section(padding="0")
     mj-column
         mj-spacer(height="10px")
-mj-section(padding="20px" background-color="#ffffff" direction="rtl")
+mj-section(padding="20px" background-color="#e6e6e6" direction="rtl")
     //- formation Mastère
     mj-column(width="30%")
         mj-image(padding="0" width="224px" src="https://i.ibb.co/xqC5DdSt/form01-Hot-Jpo24052025.png" alt="Mastère Manager des organisations en hôtellerie")/
@@ -81,5 +81,5 @@ mj-section(padding="20px" background-color="#ffffff" direction="rtl")
             | #[span(style="color:#d9d9d9;") &#x25CF;] Le Plus : #[span(style="font-weight:700;color:#1a1a1a;") Double certification internationale],
         mj-text(padding="0 15px" align="left" mj-class="T16-400 cT0") 
             | #[span(style="color:#d9d9d9;") &#x25CF;] Formation gratuite et rémunérée.
-        mj-button(padding-top="15px" target="_blank" href="https://ecosup-hotellerie.fr/mastere-manager-organisations-hotellerie")
+        //-mj-button(padding-top="15px" target="_blank" href="https://ecosup-hotellerie.fr/mastere-manager-organisations-hotellerie")
             | En savoir plus&nbsp;&nbsp;#[img(width="12px" src="https://i.ibb.co/PsQFDFLq/fleche-Hotellerie.png" alt="flèche Hôtellerie rouge")/]
