--- a/src/includes/hotellerie/_header.pug
+++ b/src/includes/hotellerie/_header.pug
@@ -19,4 +19,4 @@ mj-section(background-color="#ffffff" padding="20px")
         mj-text(align="right" padding="0px 30px" mj-class="T16-700 cT1") Hélène Salmon
         mj-text(align="right" padding="0px 30px" mj-class="T16-400 cT0") Responsable des études
         mj-text(align="right" padding="0px 30px" mj-class="T16-400 cT0") Ecosup Hôtellerie
-        mj-button(padding="0" padding-top="20px" width="280px" mj-class="T16-700 bg0 cTW") #[span(style="text-transform:uppercase;") Journée Portes Ouvertes] samedi 21 juin de 9h30 à 13h
+        //-mj-button(padding="0" padding-top="20px" width="280px" mj-class="T16-700 bg0 cTW") #[span(style="text-transform:uppercase;") Journée Portes Ouvertes] samedi 21 juin de 9h30 à 13h
