ajout des icons et mise en place des icons pour le bloc formations

--- a/src/includes/hotellerie/_formations.pug
+++ b/src/includes/hotellerie/_formations.pug
@@ -5,7 +5,7 @@
 mj-section(padding="20px" background-color="#e6e6e6")
     //-formation MAN
     mj-column(width="30%")
-        mj-image(padding="0" width="224px" src="https://i.ibb.co/zWkzZnrQ/form04-Hot-Jpo24052025.png" alt="formation Mise à niveau découverte de l'hôtellerie et de la restauration")/
+        mj-image(padding="0" width="224px" src="./images/review.png" alt="")/
     mj-column(width="70%")    
         mj-spacer(height="20px")
         mj-text(align="left" padding="0px 15px" mj-class="T13-700 cT1" text-transform="uppercase" letter-spacing="1px") Formation en initial
@@ -23,10 +23,10 @@ mj-section(padding="20px" background-color="#e6e6e6")
 mj-section(padding="0")
     mj-column
         mj-spacer(height="10px")
-mj-section(padding="20px" background-color="#e6e6e6" direction="rtl")
+mj-section(padding="20px" background-color="#e6e6e6")
     //-formation BTS        
     mj-column(width="30%")
-        mj-image(padding="0" width="224px" src="https://i.ibb.co/p6pFwGDJ/form03-Hot-Jpo24052025.png" alt="formation BTS Management Hôtellerie Restauration")/
+        mj-image(padding="0" width="224px" src="./images/review.png" alt="")/
     mj-column(width="70%")
         mj-spacer(height="20px")
         mj-text(align="left" padding="0 15px" mj-class="T13-700 cT1" text-transform="uppercase" letter-spacing="1px") Formation en apprentissage
@@ -47,7 +47,7 @@ mj-section(padding="0")
 //-formation Bachelor 
 mj-section(padding="20px" background-color="#e6e6e6")
     mj-column(width="30%")
-        mj-image(padding="0" width="224px" src="https://i.ibb.co/d1NGJSc/form02-Hot-Jpo24052025.png" alt="formation Bachelor Chargé(e) de Gestion commerciale en Hôtellerie")/
+        mj-image(padding="0" width="224px" src="./images/review.png" alt="")/
     mj-column(width="70%")
         mj-spacer(height="20px")
         mj-text(align="left" padding="0px 15px" mj-class="T13-700 cT1" text-transform="uppercase" letter-spacing="1px") Formation en apprentissage
@@ -65,10 +65,10 @@ mj-section(padding="20px" background-color="#e6e6e6")
 mj-section(padding="0")
     mj-column
         mj-spacer(height="10px")
-mj-section(padding="20px" background-color="#e6e6e6" direction="rtl")
+mj-section(padding="20px" background-color="#e6e6e6")
     //- formation Mastère
     mj-column(width="30%")
-        mj-image(padding="0" width="224px" src="https://i.ibb.co/xqC5DdSt/form01-Hot-Jpo24052025.png" alt="Mastère Manager des organisations en hôtellerie")/
+        mj-image(padding="0" width="224px" src="./images/review.png" alt="")/
     mj-column(width="70%")
         mj-spacer(height="20px")
         mj-text(align="left" padding="0px 15px" mj-class="T13-700 cT1" text-transform="uppercase" letter-spacing="1px") Formation en apprentissage
