--- a/src/includes/hotellerie/_itineraire.pug
+++ b/src/includes/hotellerie/_itineraire.pug
@@ -1,7 +1,7 @@
 //- Itineraire
 mj-wrapper(background-color="#ffffff" padding="20px")
     mj-section(padding="0px")
-        mj-group(width="225px")
+        mj-group(width="240px")
             mj-column(width="33.333333%")
                 mj-image(align="right" padding="10px" width="75px" src="https://i.ibb.co/DPZSYNzY/google-Map96x96x2.png" alt="google maps" href="https://www.google.com/maps/search/?api=1&query=Ecosup-campus,+17+place+Charles+et+Albert+Roussel,+59200+Tourcoing")/
             mj-column(width="33.333333%")
@@ -9,7 +9,7 @@ mj-wrapper(background-color="#ffffff" padding="20px")
             mj-column(width="33.333333%")
                 mj-image(align="left" padding="10px" width="75px" src="https://i.ibb.co/6c99Z3Jt/apple-Maps96x96x2.png" alt="apple maps" href="http://maps.apple.com/?q=Ecosup-campus,+17+place+Charles+et+Albert+Roussel,+59200+Tourcoing")/
     mj-section(padding="0px")
-        mj-column(width="450px")
+        mj-column(width="75%")
             mj-text(align="center" padding="0" mj-class="T24-300 cT1") Où nous trouver
             mj-text(align="center" padding="0" padding-bottom="10px" mj-class="T13-400 cT0") cliquez sur l'icon de votre choix pour organiser votre itinéraire
 mj-section(mj-class="bg1" padding="0 20px")
