--- a/src/mjml/index.mjml
+++ b/src/mjml/index.mjml
@@ -69,7 +69,7 @@
     </mj-section>
     <mj-wrapper background-color="#ffffff" padding="20px">
       <mj-section padding="0px">
-        <mj-group width="225px">
+        <mj-group width="240px">
           <mj-column width="33.333333%">
             <mj-image align="right" padding="10px" width="75px" src="https://i.ibb.co/DPZSYNzY/google-Map96x96x2.png" alt="google maps" href="https://www.google.com/maps/search/?api=1&amp;query=Ecosup-campus,+17+place+Charles+et+Albert+Roussel,+59200+Tourcoing"/>
           </mj-column>
@@ -82,7 +82,7 @@
         </mj-group>
       </mj-section>
       <mj-section padding="0px">
-        <mj-column width="450px">
+        <mj-column width="75%">
           <mj-text align="center" padding="0" mj-class="T24-300 cT1">Où nous trouver</mj-text>
           <mj-text align="center" padding="0" padding-bottom="10px" mj-class="T13-400 cT0">cliquez sur l'icon de votre choix pour organiser votre itinéraire</mj-text>
         </mj-column>
