--- a/src/includes/hotellerie/_article.pug
+++ b/src/includes/hotellerie/_article.pug
@@ -1,10 +1,12 @@
 //-Vie d'Ecosup Campus
-mj-wrapper(background-color="#e6e6e6" padding="20px")
-        mj-column(width="100%")
-            mj-text(align="center" padding="20px 25px" padding-bottom="0px" mj-class="T24-300 cT1") Vie étudiante à Ecosup Campus
-            mj-text(align="center" padding="0" padding-bottom="10px" mj-class="T13-400 cT0") suivez nous sur les réseaux sociaux
-        mj-column(width="100%")
+mj-wrapper(background-color="#1a1a1a" padding="32px" padding-bottom="0")
+    mj-section(padding="0")
+        mj-column
+            mj-text(align="center" padding="20px 25px" padding-bottom="0px" mj-class="T24-300 cT2") Vie étudiante à Ecosup&nbsp;Campus
+            mj-text(align="center" padding="0" mj-class="T13-400 cT2") suivez nous sur les réseaux sociaux
+    mj-section(padding="0")   
+        mj-column
             mj-social(align="center" padding="0 25px" icon-size="30px" icon-height="30px" inner-padding="20px" mode="horizontal")
-                mj-social-element(src="https://i.ibb.co/Zpt03yRy/hotellerie-Facebook.png" href="https://www.facebook.com/EcosupCamp/" target="_blank" alt="icon facebook")
-                mj-social-element(src="https://i.ibb.co/PZNTYBr7/hotellerie-Instagram.png" href="https://www.instagram.com/ecosup.campus/" target="_blank" alt="icon instagram")
-                mj-social-element(src="https://i.ibb.co/JR2j3yh4/hotellerie-Linkedin.png" href="https://www.linkedin.com/company/ecosup-campus" target="_blank" alt="icon linkedin")
+                mj-social-element(src="https://i.ibb.co/SwnfcyPX/facebook-H21062025.png" href="https://www.facebook.com/EcosupCamp/" target="_blank" alt="icon facebook")
+                mj-social-element(src="https://i.ibb.co/35HB8DPm/instagram-H21062025.png" href="https://www.instagram.com/ecosup.campus/" target="_blank" alt="icon instagram")
+                mj-social-element(src="https://i.ibb.co/RG769FDr/linkedin-H21062025.png" href="https://www.linkedin.com/company/ecosup-campus" target="_blank" alt="icon linkedin")
