ajout des images au bloc formations

--- a/src/includes/hotellerie/_formations.pug
+++ b/src/includes/hotellerie/_formations.pug
@@ -2,7 +2,7 @@
 mj-section(padding="20px" background-color="#e6e6e6")
     //-formation MAN
     mj-column(width="20%")
-        mj-image(padding="0" width="224px" src="./images/reviewGM.png" alt="")/
+        mj-image(padding="0" width="224px" src="https://i.ibb.co/v4g7YgXw/reviewGM.png" alt="")/
     mj-column(width="80%")    
         mj-spacer(height="20px")
         mj-text(align="left" padding="0px 15px" mj-class="T13-700 cT1" text-transform="uppercase" letter-spacing="1px") Formation en initial
@@ -21,7 +21,7 @@ mj-section(padding="0")
 mj-section(padding="20px" background-color="#e6e6e6")
     //-formation BTS        
     mj-column(width="20%")
-        mj-image(padding="0" width="224px" src="./images/reviewGM.png" alt="")/
+        mj-image(padding="0" width="224px" src="https://i.ibb.co/v4g7YgXw/reviewGM.png" alt="")/
     mj-column(width="80%")
         mj-spacer(height="20px")
         mj-text(align="left" padding="0 15px" mj-class="T13-700 cT1" text-transform="uppercase" letter-spacing="1px") Formation en apprentissage
@@ -40,7 +40,7 @@ mj-section(padding="0")
 //-formation Bachelor 
 mj-section(padding="20px" background-color="#e6e6e6")
     mj-column(width="20%")
-        mj-image(padding="0" width="224px" src="./images/reviewGM.png" alt="")/
+        mj-image(padding="0" width="224px" src="https://i.ibb.co/v4g7YgXw/reviewGM.png" alt="")/
     mj-column(width="80%")
         mj-spacer(height="20px")
         mj-text(align="left" padding="0px 15px" mj-class="T13-700 cT1" text-transform="uppercase" letter-spacing="1px") Formation en apprentissage
@@ -59,7 +59,7 @@ mj-section(padding="0")
 mj-section(padding="20px" background-color="#e6e6e6")
     //- formation Mastère
     mj-column(width="20%")
-        mj-image(padding="0" width="224px" src="./images/reviewGM.png" alt="")/
+        mj-image(padding="0" width="224px" src="https://i.ibb.co/v4g7YgXw/reviewGM.png" alt="")/
     mj-column(width="80%")
         mj-spacer(height="20px")
         mj-text(align="left" padding="0px 15px" mj-class="T13-700 cT1" text-transform="uppercase" letter-spacing="1px") Formation en apprentissage
