--- a/src/mjml/index.mjml
+++ b/src/mjml/index.mjml
@@ -96,7 +96,7 @@
     </mj-section>
     <mj-section padding="20px" background-color="#e6e6e6">
       <mj-column width="20%">
-        <mj-image padding="0" width="224px" src="./images/reviewGM.png" alt=""/>
+        <mj-image padding="0" width="224px" src="https://i.ibb.co/v4g7YgXw/reviewGM.png" alt=""/>
       </mj-column>
       <mj-column width="80%">   
         <mj-spacer height="20px"></mj-spacer>
@@ -118,7 +118,7 @@
     </mj-section>
     <mj-section padding="20px" background-color="#e6e6e6">
       <mj-column width="20%">
-        <mj-image padding="0" width="224px" src="./images/reviewGM.png" alt=""/>
+        <mj-image padding="0" width="224px" src="https://i.ibb.co/v4g7YgXw/reviewGM.png" alt=""/>
       </mj-column>
       <mj-column width="80%">
         <mj-spacer height="20px"></mj-spacer>
@@ -141,7 +141,7 @@
     </mj-section>
     <mj-section padding="20px" background-color="#e6e6e6">
       <mj-column width="20%">
-        <mj-image padding="0" width="224px" src="./images/reviewGM.png" alt=""/>
+        <mj-image padding="0" width="224px" src="https://i.ibb.co/v4g7YgXw/reviewGM.png" alt=""/>
       </mj-column>
       <mj-column width="80%">
         <mj-spacer height="20px"></mj-spacer>
@@ -163,7 +163,7 @@
     </mj-section>
     <mj-section padding="20px" background-color="#e6e6e6">
       <mj-column width="20%">
-        <mj-image padding="0" width="224px" src="./images/reviewGM.png" alt=""/>
+        <mj-image padding="0" width="224px" src="https://i.ibb.co/v4g7YgXw/reviewGM.png" alt=""/>
       </mj-column>
       <mj-column width="80%">
         <mj-spacer height="20px"></mj-spacer>
