modification du layout hotellerie

--- a/src/templates/_hotellerie.pug
+++ b/src/templates/_hotellerie.pug
@@ -50,7 +50,7 @@ mjml
             include ../includes/hotellerie/_formations
         //- bloc vie du campus
         block article
-            include ../includes/hotellerie/_article
+            include ../includes/_article
         //- bloc footer
         block footer
             include ../includes/_footer
