--- a/src/includes/aepe/_formations.pug
+++ b/src/includes/aepe/_formations.pug
@@ -2,17 +2,15 @@
 //-formation AEPE en initial
 mj-section(padding="20px" background-color="#e6e6e6")
     mj-column(width="20%")
-        mj-image(padding="0" width="224px" src="https://i.ibb.co/v4g7YgXw/reviewGM.png" alt="")/
+        mj-image(padding="0" width="224px" src="" alt="")/
     mj-column(width="80%")    
         mj-spacer(height="20px")
         mj-text(align="left" padding="0px 15px" mj-class="T13-700 cT1" text-transform="uppercase" letter-spacing="1px") Formation en initial
-        mj-text(align="left" padding="2px 15px" mj-class="T24-300 cT1") #[span(style="font-weight:700;color:#C21718;") MAN] Mise à Niveau Hôtellerie Restauration
+        mj-text(align="left" padding="2px 15px" mj-class="T24-300 cT1") #[span(style="font-weight:700;color:#C21718;") AEPE] Accompagnant(e) éducatif petite enfance
         mj-text(padding="0 15px" align="left" mj-class="T16-400 cT0") 
             | #[span(style="color:#999999;") &#x25CF;] Post-Bac,
         mj-text(padding="0 15px" align="left" mj-class="T16-400 cT0")
-            | #[span(style="color:#999999;") &#x25CF;] Durée : #[span(style="font-weight:700;color:#1a1a1a;") 1 an],
-        mj-text(padding="0 15px" align="left" mj-class="T16-400 cT0")  
-            | #[span(style="color:#999999;") &#x25CF;] Le Plus : #[span(style="font-weight:700;color:#1a1a1a;") Bourse Ecosup],
+            | #[span(style="color:#999999;") &#x25CF;] Durée : #[span(style="font-weight:700;color:#1a1a1a;") 12 mois],
         mj-text(padding="0 15px" align="left" mj-class="T16-400 cT0") 
             | #[span(style="color:#999999;") &#x25CF;] Formation initiale ou continue. Financement possible grâce à la mobilisation du CPF ou autres organismes extérieurs.
 mj-section(padding="0")
@@ -21,16 +19,14 @@ mj-section(padding="0")
 //-formation AEPE en apprentissage    
 mj-section(padding="20px" background-color="#e6e6e6")
     mj-column(width="20%")
-        mj-image(padding="0" width="224px" src="https://i.ibb.co/v4g7YgXw/reviewGM.png" alt="")/
+        mj-image(padding="0" width="224px" src="" alt="")/
     mj-column(width="80%")
         mj-spacer(height="20px")
         mj-text(align="left" padding="0 15px" mj-class="T13-700 cT1" text-transform="uppercase" letter-spacing="1px") Formation en apprentissage
-        mj-text(align="left" padding="2px 15px" mj-class="T24-300 cT1") #[span(style="font-weight:700;color:#C21718;") BTS] Management de l'Hôtellerie - Restauration
+        mj-text(align="left" padding="2px 15px" mj-class="T24-300 cT1") #[span(style="font-weight:700;color:#C21718;") AEPE] Accompagnant(e) éducatif petite enfance
         mj-text(align="left" padding="0px 15px" mj-class="T16-400 cT0") 
             | #[span(style="color:#999999;") &#x25CF;] Post-Bac,
         mj-text(align="left" padding="0 15px" mj-class="T16-400 cT0") 
-            | #[span(style="color:#999999;") &#x25CF;] Durée : #[span(style="font-weight:700;color:#1a1a1a;") 2 ans],
-        mj-text(align="left" padding="0 15px" mj-class="T16-400 cT0") 
-            | #[span(style="color:#999999;") &#x25CF;] Le Plus : #[span(style="font-weight:700;color:#1a1a1a;") Diplôme reconnue par l'État],
+            | #[span(style="color:#999999;") &#x25CF;] Durée : #[span(style="font-weight:700;color:#1a1a1a;") 12 mois],
         mj-text(align="left" padding="0 15px" mj-class="T16-400 cT0") 
             | #[span(style="color:#999999;") &#x25CF;] Formation gratuite et rémunérée.
