--- a/src/includes/assurance/_formations.pug
+++ b/src/includes/assurance/_formations.pug
@@ -2,17 +2,15 @@
 //-formation BTS Assurance        
 mj-section(padding="20px" background-color="#e6e6e6")
     mj-column(width="20%")
-        mj-image(padding="0" width="224px" src="https://i.ibb.co/v4g7YgXw/reviewGM.png" alt="")/
+        mj-image(padding="0" width="224px" src="" alt="")/
     mj-column(width="80%")
         mj-spacer(height="20px")
         mj-text(align="left" padding="0 15px" mj-class="T13-700 cT1" text-transform="uppercase" letter-spacing="1px") Formation en apprentissage
-        mj-text(align="left" padding="2px 15px" mj-class="T24-300 cT1") #[span(style="font-weight:700;color:#C21718;") BTS] Management de l'Hôtellerie - Restauration
+        mj-text(align="left" padding="2px 15px" mj-class="T24-300 cT1") #[span(style="font-weight:700;color:#C21718;") BTS] Assurance
         mj-text(align="left" padding="0px 15px" mj-class="T16-400 cT0") 
             | #[span(style="color:#999999;") &#x25CF;] Post-Bac,
         mj-text(align="left" padding="0 15px" mj-class="T16-400 cT0") 
             | #[span(style="color:#999999;") &#x25CF;] Durée : #[span(style="font-weight:700;color:#1a1a1a;") 2 ans],
-        mj-text(align="left" padding="0 15px" mj-class="T16-400 cT0") 
-            | #[span(style="color:#999999;") &#x25CF;] Le Plus : #[span(style="font-weight:700;color:#1a1a1a;") Diplôme reconnue par l'État],
         mj-text(align="left" padding="0 15px" mj-class="T16-400 cT0") 
             | #[span(style="color:#999999;") &#x25CF;] Formation gratuite et rémunérée.
 mj-section(padding="0")
@@ -21,35 +19,35 @@ mj-section(padding="0")
 //-formation Bachelor Chargé(e) de clientèles en assurance et banque
 mj-section(padding="20px" background-color="#e6e6e6")
     mj-column(width="20%")
-        mj-image(padding="0" width="224px" src="https://i.ibb.co/v4g7YgXw/reviewGM.png" alt="")/
+        mj-image(padding="0" width="224px" src="" alt="")/
     mj-column(width="80%")
         mj-spacer(height="20px")
         mj-text(align="left" padding="0px 15px" mj-class="T13-700 cT1" text-transform="uppercase" letter-spacing="1px") Formation en apprentissage
-        mj-text(align="left" padding="2px 15px" mj-class="T24-300 cT1") #[span(style="font-weight:700;color:#c21718;") Bachelor] Responsable commercial en Hôtellerie
+        mj-text(align="left" padding="2px 15px" mj-class="T24-300 cT1") #[span(style="font-weight:700;color:#c21718;") Bachelor] Chargé(e) de clientèles en assurance et banque
         mj-text(padding="0 15px" align="left" mj-class="T16-400 cT0") 
             | #[span(style="color:#999999;") &#x25CF;] Post-Bac+2,
         mj-text(padding="0 15px" align="left" mj-class="T16-400 cT0") 
             | #[span(style="color:#999999;") &#x25CF;] Durée : #[span(style="font-weight:700;color:#1a1a1a;") 1 an],
         mj-text(padding="0 15px" align="left" mj-class="T16-400 cT0") 
-            | #[span(style="color:#999999;") &#x25CF;] Le Plus : #[span(style="font-weight:700;color:#1a1a1a;") Travel Week], semaine immersive en mobilité internationale,
+            | #[span(style="color:#999999;") &#x25CF;] Le Plus : Programme élaboré en collaboration avec l' #[span(style="font-weight:700;color:#1a1a1a;") ESA],
         mj-text(padding="0 15px" align="left" mj-class="T16-400 cT0")
             | #[span(style="color:#999999;") &#x25CF;] Formation gratuite et rémunérée.
 mj-section(padding="0")
     mj-column
         mj-spacer(height="10px")
 mj-section(padding="20px" background-color="#e6e6e6")
-    //- formation Mastère
+    //- formation Mastère Expert(e) en ingénierie patrimoniale
     mj-column(width="20%")
-        mj-image(padding="0" width="224px" src="https://i.ibb.co/v4g7YgXw/reviewGM.png" alt="")/
+        mj-image(padding="0" width="224px" src="" alt="")/
     mj-column(width="80%")
         mj-spacer(height="20px")
         mj-text(align="left" padding="0px 15px" mj-class="T13-700 cT1" text-transform="uppercase" letter-spacing="1px") Formation en apprentissage
-        mj-text(align="left" padding="2px 15px" mj-class="T24-300 cT1") #[span(style="font-weight:700;color:#C21718;") Mastère] Manager des Organisations en Hôtellerie
+        mj-text(align="left" padding="2px 15px" mj-class="T24-300 cT1") #[span(style="font-weight:700;color:#C21718;") Mastère] Expert(e) en ingénierie patrimoniale
         mj-text(padding="0 15px" mj-class="T16-400 cT0") 
             | #[span(style="color:#999999;") &#x25CF;] Post-Bac+3,
         mj-text(padding="0 15px" align="left" mj-class="T16-400 cT0") 
             | #[span(style="color:#999999;") &#x25CF;] Durée : #[span(style="font-weight:700;color:#1a1a1a;") 2 ans],
         mj-text(padding="0 15px" align="left" mj-class="T16-400 cT0") 
-            | #[span(style="color:#999999;") &#x25CF;] Le Plus : #[span(style="font-weight:700;color:#1a1a1a;") Double certification internationale],
+            | #[span(style="color:#999999;") &#x25CF;] Le Plus : Programme élaboré en collaboration avec l' #[span(style="font-weight:700;color:#1a1a1a;") ESA],
         mj-text(padding="0 15px" align="left" mj-class="T16-400 cT0") 
             | #[span(style="color:#999999;") &#x25CF;] Formation gratuite et rémunérée.
