--- a/src/includes/immobilier/_formations.pug
+++ b/src/includes/immobilier/_formations.pug
@@ -2,16 +2,14 @@
 //-formation BTS professions immobilières        
 mj-section(padding="20px" background-color="#e6e6e6")
     mj-column(width="20%")
-        mj-image(padding="0" width="224px" src="https://i.ibb.co/v4g7YgXw/reviewGM.png" alt="")/
+        mj-image(padding="0" width="224px" src="" alt="")/
     mj-column(width="80%")
         mj-spacer(height="20px")
         mj-text(align="left" padding="0 15px" mj-class="T13-700 cT1" text-transform="uppercase" letter-spacing="1px") Formation en apprentissage
-        mj-text(align="left" padding="2px 15px" mj-class="T24-300 cT1") #[span(style="font-weight:700;color:#C21718;") BTS] Management de l'Hôtellerie - Restauration
+        mj-text(align="left" padding="2px 15px" mj-class="T24-300 cT1") #[span(style="font-weight:700;color:#C21718;") BTS] Professions immobilières
         mj-text(align="left" padding="0px 15px" mj-class="T16-400 cT0") 
             | #[span(style="color:#999999;") &#x25CF;] Post-Bac,
         mj-text(align="left" padding="0 15px" mj-class="T16-400 cT0") 
             | #[span(style="color:#999999;") &#x25CF;] Durée : #[span(style="font-weight:700;color:#1a1a1a;") 2 ans],
-        mj-text(align="left" padding="0 15px" mj-class="T16-400 cT0") 
-            | #[span(style="color:#999999;") &#x25CF;] Le Plus : #[span(style="font-weight:700;color:#1a1a1a;") Diplôme reconnue par l'État],
         mj-text(align="left" padding="0 15px" mj-class="T16-400 cT0") 
             | #[span(style="color:#999999;") &#x25CF;] Formation gratuite et rémunérée.
