--- a/src/includes/tourisme/_formations.pug
+++ b/src/includes/tourisme/_formations.pug
@@ -2,30 +2,30 @@
 //-formation BTS Tourisme    
 mj-section(padding="20px" background-color="#e6e6e6")
     mj-column(width="20%")
-        mj-image(padding="0" width="224px" src="https://i.ibb.co/v4g7YgXw/reviewGM.png" alt="")/
+        mj-image(padding="0" width="224px" src="" alt="")/
     mj-column(width="80%")
         mj-spacer(height="20px")
         mj-text(align="left" padding="0 15px" mj-class="T13-700 cT1" text-transform="uppercase" letter-spacing="1px") Formation en apprentissage
-        mj-text(align="left" padding="2px 15px" mj-class="T24-300 cT1") #[span(style="font-weight:700;color:#C21718;") BTS] Management de l'Hôtellerie - Restauration
+        mj-text(align="left" padding="2px 15px" mj-class="T24-300 cT1") #[span(style="font-weight:700;color:#C21718;") BTS] Tourisme
         mj-text(align="left" padding="0px 15px" mj-class="T16-400 cT0") 
             | #[span(style="color:#999999;") &#x25CF;] Post-Bac,
         mj-text(align="left" padding="0 15px" mj-class="T16-400 cT0") 
             | #[span(style="color:#999999;") &#x25CF;] Durée : #[span(style="font-weight:700;color:#1a1a1a;") 2 ans],
         mj-text(align="left" padding="0 15px" mj-class="T16-400 cT0") 
-            | #[span(style="color:#999999;") &#x25CF;] Le Plus : #[span(style="font-weight:700;color:#1a1a1a;") Diplôme reconnue par l'État],
+            | #[span(style="color:#999999;") &#x25CF;] Le Plus : #[span(style="font-weight:700;color:#1a1a1a;") préparation au CCA], Cabin Crew Attestation,
         mj-text(align="left" padding="0 15px" mj-class="T16-400 cT0") 
             | #[span(style="color:#999999;") &#x25CF;] Formation gratuite et rémunérée.
 mj-section(padding="0")
     mj-column
         mj-spacer(height="10px")
-//-formation Bachelor 
+//-formation Bachelor Responsable commercial en tourisme
 mj-section(padding="20px" background-color="#e6e6e6")
     mj-column(width="20%")
-        mj-image(padding="0" width="224px" src="https://i.ibb.co/v4g7YgXw/reviewGM.png" alt="")/
+        mj-image(padding="0" width="224px" src="" alt="")/
     mj-column(width="80%")
         mj-spacer(height="20px")
         mj-text(align="left" padding="0px 15px" mj-class="T13-700 cT1" text-transform="uppercase" letter-spacing="1px") Formation en apprentissage
-        mj-text(align="left" padding="2px 15px" mj-class="T24-300 cT1") #[span(style="font-weight:700;color:#c21718;") Bachelor] Responsable commercial en Hôtellerie
+        mj-text(align="left" padding="2px 15px" mj-class="T24-300 cT1") #[span(style="font-weight:700;color:#c21718;") Bachelor] Responsable commercial en tourisme
         mj-text(padding="0 15px" align="left" mj-class="T16-400 cT0") 
             | #[span(style="color:#999999;") &#x25CF;] Post-Bac+2,
         mj-text(padding="0 15px" align="left" mj-class="T16-400 cT0") 
@@ -37,14 +37,14 @@ mj-section(padding="20px" background-color="#e6e6e6")
 mj-section(padding="0")
     mj-column
         mj-spacer(height="10px")
-//- formation Mastère
+//- formation Mastère Management stratégique des entreprises du tourisme
 mj-section(padding="20px" background-color="#e6e6e6")
     mj-column(width="20%")
         mj-image(padding="0" width="224px" src="https://i.ibb.co/v4g7YgXw/reviewGM.png" alt="")/
     mj-column(width="80%")
         mj-spacer(height="20px")
         mj-text(align="left" padding="0px 15px" mj-class="T13-700 cT1" text-transform="uppercase" letter-spacing="1px") Formation en apprentissage
-        mj-text(align="left" padding="2px 15px" mj-class="T24-300 cT1") #[span(style="font-weight:700;color:#C21718;") Mastère] Manager des Organisations en Hôtellerie
+        mj-text(align="left" padding="2px 15px" mj-class="T24-300 cT1") #[span(style="font-weight:700;color:#C21718;") Mastère] Management stratégique des entreprises du tourisme
         mj-text(padding="0 15px" mj-class="T16-400 cT0") 
             | #[span(style="color:#999999;") &#x25CF;] Post-Bac+3,
         mj-text(padding="0 15px" align="left" mj-class="T16-400 cT0") 
