correction et ajout des icons du bloc formations et correction du bloc itineraire

--- a/src/templates/_aepe.pug
+++ b/src/templates/_aepe.pug
@@ -41,15 +41,15 @@ mjml
         //- bloc header
             block header
             include ../includes/aepe/_header
+        //- bloc intineraire
+        block itineraire
+            include ../includes/aepe/_itineraire
         //- bloc formations
         block formations
             include ../includes/aepe/_formations
         //- bloc article
         block article
-            include ../includes/aepe/_article
-        //- bloc intineraire
-        block itineraire
-            include ../includes/aepe/_itineraire
+            include ../includes/_article
         //- bloc footer
         block footer
             include ../includes/_footer
