ajustement et ajout des images pour les bloc informations et itineraire

--- a/src/includes/assurance/_formations.pug
+++ b/src/includes/assurance/_formations.pug
@@ -2,11 +2,11 @@
 //-formation BTS Assurance        
 mj-section(padding="20px" background-color="#e6e6e6")
     mj-column(width="20%")
-        mj-image(padding="0" width="224px" src="" alt="")/
+        mj-image(padding="0" width="224px" src="https://i.ibb.co/TxdhvJgN/icon-Assu062025.png" alt="icon parapluie de protection")/
     mj-column(width="80%")
         mj-spacer(height="20px")
         mj-text(align="left" padding="0 15px" mj-class="T13-700 cT1" text-transform="uppercase" letter-spacing="1px") Formation en apprentissage
-        mj-text(align="left" padding="2px 15px" mj-class="T24-300 cT1") #[span(style="font-weight:700;color:#C21718;") BTS] Assurance
+        mj-text(align="left" padding="2px 15px" mj-class="T24-300 cT1") #[span(style="font-weight:700;color:#944694;") BTS] Assurance
         mj-text(align="left" padding="0px 15px" mj-class="T16-400 cT0") 
             | #[span(style="color:#999999;") &#x25CF;] Post-Bac,
         mj-text(align="left" padding="0 15px" mj-class="T16-400 cT0") 
@@ -19,11 +19,11 @@ mj-section(padding="0")
 //-formation Bachelor Chargé(e) de clientèles en assurance et banque
 mj-section(padding="20px" background-color="#e6e6e6")
     mj-column(width="20%")
-        mj-image(padding="0" width="224px" src="" alt="")/
+        mj-image(padding="0" width="224px" src="https://i.ibb.co/TxdhvJgN/icon-Assu062025.png" alt="icon parapluie de protection")/
     mj-column(width="80%")
         mj-spacer(height="20px")
         mj-text(align="left" padding="0px 15px" mj-class="T13-700 cT1" text-transform="uppercase" letter-spacing="1px") Formation en apprentissage
-        mj-text(align="left" padding="2px 15px" mj-class="T24-300 cT1") #[span(style="font-weight:700;color:#c21718;") Bachelor] Chargé(e) de clientèles en assurance et banque
+        mj-text(align="left" padding="2px 15px" mj-class="T24-300 cT1") #[span(style="font-weight:700;color:#944694;") Bachelor] Chargé(e) de clientèles en assurance et banque
         mj-text(padding="0 15px" align="left" mj-class="T16-400 cT0") 
             | #[span(style="color:#999999;") &#x25CF;] Post-Bac+2,
         mj-text(padding="0 15px" align="left" mj-class="T16-400 cT0") 
@@ -38,11 +38,11 @@ mj-section(padding="0")
 mj-section(padding="20px" background-color="#e6e6e6")
     //- formation Mastère Expert(e) en ingénierie patrimoniale
     mj-column(width="20%")
-        mj-image(padding="0" width="224px" src="" alt="")/
+        mj-image(padding="0" width="224px" src="https://i.ibb.co/TxdhvJgN/icon-Assu062025.png" alt="icon parapluie de protection")/
     mj-column(width="80%")
         mj-spacer(height="20px")
         mj-text(align="left" padding="0px 15px" mj-class="T13-700 cT1" text-transform="uppercase" letter-spacing="1px") Formation en apprentissage
-        mj-text(align="left" padding="2px 15px" mj-class="T24-300 cT1") #[span(style="font-weight:700;color:#C21718;") Mastère] Expert(e) en ingénierie patrimoniale
+        mj-text(align="left" padding="2px 15px" mj-class="T24-300 cT1") #[span(style="font-weight:700;color:#944694;") Mastère] Expert(e) en ingénierie patrimoniale
         mj-text(padding="0 15px" mj-class="T16-400 cT0") 
             | #[span(style="color:#999999;") &#x25CF;] Post-Bac+3,
         mj-text(padding="0 15px" align="left" mj-class="T16-400 cT0") 
