--- a/src/includes/assurance/_formations.pug
+++ b/src/includes/assurance/_formations.pug
@@ -6,7 +6,7 @@ mj-section(padding="20px" background-color="#e6e6e6")
     mj-column(width="80%")
         mj-spacer(height="20px")
         mj-text(align="left" padding="0 15px" mj-class="T13-700 cT1" text-transform="uppercase" letter-spacing="1px") Formation en apprentissage
-        mj-text(align="left" padding="2px 15px" mj-class="T24-300 cT1") #[span(style="font-weight:700;color:#944694;") BTS] Assurance
+        mj-text(align="left" padding="2px 15px" mj-class="T24-300 cT1") #[span(style="color:#944694;") &#x27A4;] #[span(style="font-weight:700;color:#1a1a1a;") BTS] Assurance
         mj-text(align="left" padding="0px 15px" mj-class="T16-400 cT0") 
             | #[span(style="color:#999999;") &#x25CF;] Post-Bac,
         mj-text(align="left" padding="0 15px" mj-class="T16-400 cT0") 
@@ -23,7 +23,7 @@ mj-section(padding="20px" background-color="#e6e6e6")
     mj-column(width="80%")
         mj-spacer(height="20px")
         mj-text(align="left" padding="0px 15px" mj-class="T13-700 cT1" text-transform="uppercase" letter-spacing="1px") Formation en apprentissage
-        mj-text(align="left" padding="2px 15px" mj-class="T24-300 cT1") #[span(style="font-weight:700;color:#944694;") Bachelor] Chargé(e) de clientèles en assurance et banque
+        mj-text(align="left" padding="2px 15px" mj-class="T24-300 cT1") #[span(style="color:#944694;") &#x27A4;] #[span(style="font-weight:700;color:#1a1a1a;") Bachelor] Chargé(e) de clientèles en assurance et banque
         mj-text(padding="0 15px" align="left" mj-class="T16-400 cT0") 
             | #[span(style="color:#999999;") &#x25CF;] Post-Bac+2,
         mj-text(padding="0 15px" align="left" mj-class="T16-400 cT0") 
@@ -42,7 +42,7 @@ mj-section(padding="20px" background-color="#e6e6e6")
     mj-column(width="80%")
         mj-spacer(height="20px")
         mj-text(align="left" padding="0px 15px" mj-class="T13-700 cT1" text-transform="uppercase" letter-spacing="1px") Formation en apprentissage
-        mj-text(align="left" padding="2px 15px" mj-class="T24-300 cT1") #[span(style="font-weight:700;color:#944694;") Mastère] Expert(e) en ingénierie patrimoniale
+        mj-text(align="left" padding="2px 15px" mj-class="T24-300 cT1") #[span(style="color:#944694;") &#x27A4;] #[span(style="font-weight:700;color:#1a1a1a;") Mastère] Expert(e) en ingénierie patrimoniale
         mj-text(padding="0 15px" mj-class="T16-400 cT0") 
             | #[span(style="color:#999999;") &#x25CF;] Post-Bac+3,
         mj-text(padding="0 15px" align="left" mj-class="T16-400 cT0") 
