--- a/src/includes/dietetique/_formations.pug
+++ b/src/includes/dietetique/_formations.pug
@@ -6,7 +6,7 @@ mj-section(padding="20px" background-color="#e6e6e6")
     mj-column(width="80%")
         mj-spacer(height="20px")
         mj-text(align="left" padding="0 15px" mj-class="T13-700 cT1" text-transform="uppercase" letter-spacing="1px") Formation initiale
-        mj-text(align="left" padding="2px 15px" mj-class="T24-300 cT1") #[span(style="font-weight:700;color:#EC619F;") BTS] Diététique et nutrition.
+        mj-text(align="left" padding="2px 15px" mj-class="T24-300 cT1") #[span(style="color:#EC619F;") &#x27A4;] #[span(style="font-weight:700;color:#1a1a1a;") BTS] Diététique et nutrition.
         mj-text(align="left" padding="0px 15px" mj-class="T16-400 cT0") 
             | #[span(style="color:#999999;") &#x25CF;] Post-Bac,
         mj-text(align="left" padding="0 15px" mj-class="T16-400 cT0") 
@@ -23,7 +23,7 @@ mj-section(padding="20px" background-color="#e6e6e6")
     mj-column(width="80%")
         mj-spacer(height="20px")
         mj-text(align="left" padding="0px 15px" mj-class="T13-700 cT1" text-transform="uppercase" letter-spacing="1px") Formation initiale
-        mj-text(align="left" padding="2px 15px" mj-class="T24-300 cT1") #[span(style="font-weight:700;color:#EC619F;") Bachelor] Chargé(e) de projet en nutrition et de la prise en charge des troubles du comportement alimentaire.
+        mj-text(align="left" padding="2px 15px" mj-class="T24-300 cT1") #[span(style="color:#EC619F;") &#x27A4;] #[span(style="font-weight:700;color:#1a1a1a;") Bachelor] Chargé(e) de projet en nutrition et de la prise en charge des troubles du comportement alimentaire.
         mj-text(padding="0 15px" align="left" mj-class="T16-400 cT0") 
             | #[span(style="color:#999999;") &#x25CF;] Post-Bac+2,
         mj-text(padding="0 15px" align="left" mj-class="T16-400 cT0") 
