--- a/src/includes/hotellerie/_formations.pug
+++ b/src/includes/hotellerie/_formations.pug
@@ -6,7 +6,7 @@ mj-section(padding="20px" background-color="#e6e6e6")
     mj-column(width="80%")    
         mj-spacer(height="20px")
         mj-text(align="left" padding="0px 15px" mj-class="T13-700 cT1" text-transform="uppercase" letter-spacing="1px") Formation en initial
-        mj-text(align="left" padding="2px 15px" mj-class="T24-300 cT1") #[span(style="font-weight:700;color:#C21718;") MAN] Mise à Niveau Hôtellerie Restauration
+        mj-text(align="left" padding="2px 15px" mj-class="T24-300 cT1") #[span(style="color:#C21718;") &#x27A4;] #[span(style="font-weight:700;color:#1a1a1a;") MAN] Mise à Niveau Hôtellerie Restauration
         mj-text(padding="0 15px" align="left" mj-class="T16-400 cT0") 
             | #[span(style="color:#999999;") &#x25CF;] Post-Bac,
         mj-text(padding="0 15px" align="left" mj-class="T16-400 cT0")
@@ -25,7 +25,7 @@ mj-section(padding="20px" background-color="#e6e6e6")
     mj-column(width="80%")
         mj-spacer(height="20px")
         mj-text(align="left" padding="0 15px" mj-class="T13-700 cT1" text-transform="uppercase" letter-spacing="1px") Formation en apprentissage
-        mj-text(align="left" padding="2px 15px" mj-class="T24-300 cT1") #[span(style="font-weight:700;color:#C21718;") BTS] Management de l'Hôtellerie - Restauration
+        mj-text(align="left" padding="2px 15px" mj-class="T24-300 cT1") #[span(style="color:#C21718;") &#x27A4;] #[span(style="font-weight:700;color:#1a1a1a;") BTS] Management de l'Hôtellerie - Restauration
         mj-text(align="left" padding="0px 15px" mj-class="T16-400 cT0") 
             | #[span(style="color:#999999;") &#x25CF;] Post-Bac,
         mj-text(align="left" padding="0 15px" mj-class="T16-400 cT0") 
@@ -44,7 +44,7 @@ mj-section(padding="20px" background-color="#e6e6e6")
     mj-column(width="80%")
         mj-spacer(height="20px")
         mj-text(align="left" padding="0px 15px" mj-class="T13-700 cT1" text-transform="uppercase" letter-spacing="1px") Formation en apprentissage
-        mj-text(align="left" padding="2px 15px" mj-class="T24-300 cT1") #[span(style="font-weight:700;color:#c21718;") Bachelor] Responsable commercial en Hôtellerie
+        mj-text(align="left" padding="2px 15px" mj-class="T24-300 cT1") #[span(style="color:#c21718;") &#x27A4;] #[span(style="font-weight:700;color:#1a1a1a;") Bachelor] Responsable commercial en Hôtellerie
         mj-text(padding="0 15px" align="left" mj-class="T16-400 cT0") 
             | #[span(style="color:#999999;") &#x25CF;] Post-Bac+2,
         mj-text(padding="0 15px" align="left" mj-class="T16-400 cT0") 
@@ -63,7 +63,7 @@ mj-section(padding="20px" background-color="#e6e6e6")
     mj-column(width="80%")
         mj-spacer(height="20px")
         mj-text(align="left" padding="0px 15px" mj-class="T13-700 cT1" text-transform="uppercase" letter-spacing="1px") Formation en apprentissage
-        mj-text(align="left" padding="2px 15px" mj-class="T24-300 cT1") #[span(style="font-weight:700;color:#C21718;") Mastère] Manager des Organisations en Hôtellerie
+        mj-text(align="left" padding="2px 15px" mj-class="T24-300 cT1") #[span(style="color:#C21718;") &#x27A4;] #[span(style="font-weight:700;color:#1a1a1a;") Mastère] Manager des Organisations en Hôtellerie
         mj-text(padding="0 15px" mj-class="T16-400 cT0") 
             | #[span(style="color:#999999;") &#x25CF;] Post-Bac+3,
         mj-text(padding="0 15px" align="left" mj-class="T16-400 cT0") 
