création du bloc headimg dans l'ensemble du module

--- a/src/templates/_aepe.pug
+++ b/src/templates/_aepe.pug
@@ -39,9 +39,9 @@ mjml
     mj-body(background-color='#f2f2f2' width="600px")
         //- content
         block content
-        //- bloc header
-            block header
-            include ../includes/aepe/_header
+        //- bloc header images
+        block headimg
+            include ../includes/aepe/_headimg
         //- bloc intineraire
         block itineraire
             include ../includes/aepe/_itineraire
