--- a/src/templates/_hotellerie.pug
+++ b/src/templates/_hotellerie.pug
@@ -40,9 +40,12 @@ mjml
     mj-body(background-color='#f2f2f2' width="600px")
         //- content
         block content
-        //- bloc header
-        block header
-            include ../includes/hotellerie/_header
+        //- bloc header images
+        block headimg
+            include ../includes/hotellerie/_headimg
+        //- bloc header textes
+            block headtext
+            include ../includes/hotellerie/_headtext
         //- bloc itineraire
         block itineraire
             include ../includes/hotellerie/_itineraire
